# autoxray-research

./: .gitignore  README.md  cluster_launch.sh  cluster_launch_ddp.sh  cluster_status.sh  cluster_stop.sh  ddp_design.html  download_nih_dataset.sh  download_nih_remote.sh  launch_ddp.py  loop.sh  loop_ddp.sh  make_report.py  plot_results.py  prepare.py  program.md  program_ddp.md  pyproject.toml  results.tsv  setup_cluster_nodes.py  test_inference.py  train.py
webui/: app.py  requirements.txt
